--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 name = i3blocks-spotify-persist
 version = attr: i3blocks_spotify_persist.__version__
 description = A persistent i3blocks blocklet for the Spotify desktop app
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/un-def/i3blocks-spotify-persist
 author = un.def
 author_email = me@undef.im
