Rename to i3blocks-mpris

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = i3blocks-spotify-persist
-version = attr: i3blocks_spotify_persist.__version__
-description = A persistent i3blocks blocklet for the Spotify desktop app
+name = i3blocks-mpris
+version = attr: i3blocks_mpris.__version__
+description = A persistent i3blocks blocklet for the MPRIS D-Bus interface
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/un-def/i3blocks-spotify-persist
+url = https://github.com/un-def/i3blocks-mpris
 author = un.def
 author_email = me@undef.im
 license = MIT
@@ -23,14 +23,14 @@ classifiers =
 [options]
 zip_safe = true
 python_requires = >=3.5
-py_modules = i3blocks_spotify_persist
+py_modules = i3blocks_mpris
 install_requires =
     dbus-python >= 1.2.4, < 1.3
     PyGObject >= 3.26, < 3.37
 
 [options.entry_points]
 console_scripts =
-    i3blocks-spotify-persist = i3blocks_spotify_persist:_main
+    i3blocks-mpris = i3blocks_mpris:_main
 
 [isort]
 lines_after_imports = 2
