--- a/setup.cfg
+++ b/setup.cfg
@@ -15,18 +15,19 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 zip_safe = true
 python_requires = >=3.6
 py_modules = i3blocks_mpris
 install_requires =
-    dbus-python >= 1.2.4, < 1.3
-    PyGObject >= 3.26, < 3.41
+    dbus-python >= 1.3, < 1.4
+    PyGObject >= 3.46, < 3.48, != 3.47.*
 
 [options.entry_points]
 console_scripts =
